# spell-checker

./: LICENSE  README.md  assoc.txt  cabal.project.local  correcteur.cabal  en_GB.dic  freq.txt  freq2.txt  spell-checker.cabal
Dictionaries/en/: sherlock_holmes.txt
Py_frequence_2mots/: Harry_Potter_1.txt  Harry_Potter_2.txt  Harry_Potter_3.txt  Harry_Potter_4.txt  assoc.txt  freq.txt  freq2.txt  frequence.py
SerializedStatistics/: result
app/: DataFromTxt.hs  Main.hs  StatsFromTxt.hs  WordsTrees.hs
app/Dictionaries/: en_GB.dic
bench/: Bench.hs
layouts/: README.md  qwerty.json
lib/Data/: Keyboard.hs  WordTree.hs
src/: Main.hs  SpellCheckerInterface.hs  StatsFromTxt.hs
