cabal-version:      3.6
name:               correcteur
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: Correcteur orthographique en Haskell

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license: aucune

-- The package author(s).
-- author: Nathan Maillet

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable correcteur
    main-is:    Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-modules:  WordsTrees

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base       ^>= 4.16.3.0,
        parallel   ^>= 1.0.0.0,
        vector     ^>= 0.12.0.0,
        bytestring ^>= 0.11.4.0,
        aeson      ^>= 2.1.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
